Take into account summer time for the date offset in PO-Revision-Date

Summary:
Using the offsetFromUtc is more straightforward and accurate

BUG: 393081

Reviewers: #localization, aacid, mlaurent, ltoscano, shaforostoff

Reviewed By: #localization, aacid

Tags: #localization

Differential Revision: https://phabricator.kde.org/D14721